--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "backend": "node backend/server.js"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "json-server": "^1.0.0-beta.3",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-gh-pages": "^1.0.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
